--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,5 @@
 name: dslink_bev
 description: Belimo Energy Valve DSLink
 dependencies:
-  dslink:
-    git: https://github.com/IOT-DSA/sdk-dslink-dart.git
+  dslink: ^0.5.4
 
