Fix error when socket exception occurs.
Add socket exception catch in addition to HttpException.
* Eg: If a connection is offline as opposed to just an Http error.
Update dependencies to use sdk from github rather than pub.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: dslink_bev
 description: Belimo Energy Valve DSLink
 dependencies:
-  dslink: ^0.5.4
+  dslink:
+    git: https://github.com/IOT-DSA/sdk-dslink-dart.git
 
